<resources>
    <string name="app_name">Fabflix Mobile</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_search_movie">SEARCH</string>
    <string name="action_sign_in_short">LOGIN</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >2 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fabflix">Fabflix</string>
    <string name="search">Movie Search</string>
    <string name="prompt_movie">Movie Title</string>
    <string name="action_back">Back</string>
    <string name="director">Director </string>
    <string name="year">Year</string>
    <string name="title">Title</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="genre">Genre</string>
    <string name="stars">Stars </string>


</resources>