<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/container"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:paddingLeft="@dimen/activity_horizontal_margin"
                                                   android:paddingTop="@dimen/activity_vertical_margin"
                                                   android:paddingRight="@dimen/activity_horizontal_margin"
                                                   android:paddingBottom="@dimen/activity_vertical_margin"
                                                   tools:context=".ui.singlemovie.SingleMovieActivity">

    <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/movie_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_title" />

    <TableLayout android:layout_width="match_parent" android:layout_height="400dp"
                 app:layout_constraintTop_toBottomOf="@id/movie_year"
                android:paddingTop="100dp" >

        <TableRow>

            <TextView android:text="@string/director" android:layout_column="1" />
            <TextView android:id="@+id/director_name_single_page" android:layout_column="2"/>

        </TableRow>

        <TableRow>
            <TextView android:text="@string/genre" android:layout_column="1" />
            <TextView android:id="@+id/genresNames" android:layout_column="2"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/stars" android:layout_column="1" />
            <TextView android:id="@+id/starsNames" android:layout_column="2"/>
        </TableRow>
    </TableLayout>





</androidx.constraintlayout.widget.ConstraintLayout>